{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 18,
  "lineage": "50bf7b61-7297-80cf-3be1-06ad5b36836e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_ipaddress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db04e8a5f05ecb04",
            "association_id": "eipassoc-0ce4d1d7541c29b73",
            "domain": "vpc",
            "id": "eipalloc-0db04e8a5f05ecb04",
            "instance": "i-0dcfadba9a3997280",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d41024a2815af328",
            "private_dns": "ip-10-0-1-235.ec2.internal",
            "private_ip": "10.0.1.235",
            "public_dns": "ec2-52-54-0-113.compute-1.amazonaws.com",
            "public_ip": "52.54.0.113",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web",
            "aws_internet_gateway.igw",
            "aws_key_pair.public_key",
            "aws_network_interface.primary_eni",
            "aws_subnet.subnet_public",
            "aws_vpc.myvpc",
            "tls_private_key.mykey"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d27d9b3be22bdb72",
            "association_id": "eipassoc-09d60111b66465c2d",
            "domain": "vpc",
            "id": "eipalloc-0d27d9b3be22bdb72",
            "instance": "i-0b6e0e71996431582",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05060215b6b9baf47",
            "private_dns": "ip-10-0-1-48.ec2.internal",
            "private_ip": "10.0.1.48",
            "public_dns": "ec2-52-21-18-129.compute-1.amazonaws.com",
            "public_ip": "52.21.18.129",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web",
            "aws_internet_gateway.igw",
            "aws_key_pair.public_key",
            "aws_network_interface.primary_eni",
            "aws_subnet.subnet_public",
            "aws_vpc.myvpc",
            "tls_private_key.mykey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0889a44b331db0194",
            "arn": "arn:aws:ec2:us-east-1:513015787880:instance/i-0dcfadba9a3997280",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dcfadba9a3997280",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d41024a2815af328"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d41024a2815af328",
            "private_dns": "ip-10-0-1-235.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-088533cb8ce7a89b9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0901e9022f4afdec9",
            "tags": {
              "Name": "Webserver-0"
            },
            "tags_all": {
              "Name": "Webserver-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0407b76b5b490b9f8",
              "sg-0abdff422579ff048"
            ]
          },
          "dependencies": [
            "aws_key_pair.public_key",
            "aws_network_interface.primary_eni",
            "aws_subnet.subnet_public",
            "aws_vpc.myvpc",
            "tls_private_key.mykey"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0889a44b331db0194",
            "arn": "arn:aws:ec2:us-east-1:513015787880:instance/i-0b6e0e71996431582",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6e0e71996431582",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-05060215b6b9baf47"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05060215b6b9baf47",
            "private_dns": "ip-10-0-1-48.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07dc7a8f9896b36c3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0901e9022f4afdec9",
            "tags": {
              "Name": "Webserver-1"
            },
            "tags_all": {
              "Name": "Webserver-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0407b76b5b490b9f8",
              "sg-0abdff422579ff048"
            ]
          },
          "dependencies": [
            "aws_key_pair.public_key",
            "aws_network_interface.primary_eni",
            "aws_subnet.subnet_public",
            "aws_vpc.myvpc",
            "tls_private_key.mykey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513015787880:internet-gateway/igw-0f1b32e86d01a783d",
            "id": "igw-0f1b32e86d01a783d",
            "owner_id": "513015787880",
            "vpc_id": "vpc-0f06cca29c133a076"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "primary_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513015787880:network-interface/eni-0d41024a2815af328",
            "id": "eni-0d41024a2815af328",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:00:d4:22:9f:29",
            "owner_id": "513015787880",
            "private_dns_name": "ip-10-0-1-235.ec2.internal",
            "private_ip": "10.0.1.235",
            "private_ip_list": [
              "10.0.1.235"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.235"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0407b76b5b490b9f8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0901e9022f4afdec9"
          },
          "dependencies": [
            "aws_subnet.subnet_public",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513015787880:network-interface/eni-05060215b6b9baf47",
            "id": "eni-05060215b6b9baf47",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:c5:8a:da:30:7f",
            "owner_id": "513015787880",
            "private_dns_name": "ip-10-0-1-48.ec2.internal",
            "private_ip": "10.0.1.48",
            "private_ip_list": [
              "10.0.1.48"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.48"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0407b76b5b490b9f8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0901e9022f4afdec9"
          },
          "dependencies": [
            "aws_subnet.subnet_public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513015787880:route-table/rtb-04b08e1ce364fc6da",
            "id": "rtb-04b08e1ce364fc6da",
            "owner_id": "513015787880",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f1b32e86d01a783d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f06cca29c133a076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3cd9e56d7850259",
            "route_table_id": "rtb-04b08e1ce364fc6da",
            "subnet_id": "subnet-0901e9022f4afdec9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public",
            "aws_subnet.subnet_public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513015787880:security-group/sg-0abdff422579ff048",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0abdff422579ff048",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "513015787880",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f06cca29c133a076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513015787880:subnet/subnet-0901e9022f4afdec9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0901e9022f4afdec9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "513015787880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet"
            },
            "tags_all": {
              "Name": "my_public_subnet"
            },
            "vpc_id": "vpc-0f06cca29c133a076"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513015787880:vpc/vpc-0f06cca29c133a076",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-094e1e310d6c3b92d",
            "default_route_table_id": "rtb-04317b5fd49d165b2",
            "default_security_group_id": "sg-0407b76b5b490b9f8",
            "dhcp_options_id": "dopt-08c71bbba20d72bfe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f06cca29c133a076",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04317b5fd49d165b2",
            "owner_id": "513015787880",
            "tags": {
              "Name": "my_custom_vpc"
            },
            "tags_all": {
              "Name": "my_custom_vpc"
            }
          }
        }
      ]
    }
  ]
}